general/api/deployment.dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: production
  labels:
    app: backend
  annotations:
    keel.sh/policy: all
spec:
  replicas: 4
  minReadySeconds: 60
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: davardanian/minesweeper-backend:latest
          imagePullPolicy: Always
          # env:
          #   - name: PUBLIC_URL
          #     value: '/production/'
          ports:
            - containerPort: 1238
---
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: backend
spec:
  type: ClusterIP
  ports:
    - port: 1238
      protocol: TCP
  selector:
    app: backend
