general/api/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # acme.cert-manager.io/http01-edit-in-place: 'true'
spec:
  tls:
    - hosts:
        - 'api.minesweepers.games'
      secretName: api-tls
  rules:
    - host: api.minesweepers.games
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: backend
                port:
                  number: 1238
